force-app/main/default/objects/Fokus_Discount__c/Fokus_Discount__c.object-meta.xml
<CustomObject>
    <description>Object requested by Telia IT. To be used for Fokus data sync</description>
    <label>Fokus Discount</label>
    <nameField>
        <label>Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fokus Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>