force-app/main/default/objects/Fokus_Discount__c/fields/Discount_Id__c.field-meta.xml
<CustomField>
    <fullName>Discount_Id__c</fullName>
    <externalId>true</externalId>
    <label>Discount Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>