force-app/main/default/objects/Fokus_Discount__c/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <label>Discount Percentage</label>
    <precision>11</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>