force-app/main/default/objects/Fokus_Discount__c/fields/Product_Discount_Composite_Key__c.field-meta.xml
<CustomField>
    <fullName>Product_Discount_Composite_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Should contain the composition of product id and discount id separated with a dot (&quot;.&quot;). E.g. &quot;GPMBBS.MBBS15&quot; if the priceplan = GPMBBS and discount = MBBS15.</description>
    <externalId>true</externalId>
    <label>Product.Discount Composite Key</label>
    <length>99</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>